k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: dcim-app
    namespace: dcim
    labels:
        app: dcim-app
spec:
    type: NodePort
    selector:
        app: dcim-app
    ports:
        - port: 80
          targetPort: 3000
          nodePort: 30300
          name: http
